<resources>
    <string name="app_name">АМО лабораторна 5</string>
    <string name="input_label">Введіть коефіцієнти та вільні члени СЛАР:</string>
    <string name="input_epsilon">Введіть точність ε</string>
    <string name="inc_equ_num">+</string>
    <string name="dec_equ_num">-</string>
    <string name="x1">x<sub>1</sub>+</string>
    <string name="x2">x<sub>2</sub>+</string>
    <string name="x3">x<sub>3</sub>=</string>
    <string name="solve">Розв\'язати СЛАР</string>
    <string name="warning">Матриця коефіцієнтів СЛАР не діагонально домінантна, тому процес ітерації розбіжний. Переставити місцями рядки?</string>
    <string name="unresolvable">СЛАР не вдається звести до збіжної шляхом переставляння рядків. Спробувати розв\'язати все-одно?</string>
    <string name="input_error">Введіть усі значення в таблицю!</string>
    <string name="bad_choice">Поганий вибір</string>
    <string name="good_choice">Ви зробили правильний вибір</string>
    <string name="probably_good_choice">Можливо, так на краще</string>
</resources>
