<?xml version="1.0" encoding="utf-8"?>


    <android.support.v7.widget.GridLayout
            android:layout_marginTop="8dp"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:id="@+id/grid_view">
        <TextView

                android:text="@string/input_epsilon"
                android:id="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_columnSpan="5"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_column="0"
                app:layout_row="4"
                android:layout_height="wrap_content"
                android:layout_width="195dp"/>
        <TextView

                android:text="@string/input_label"
                android:id="@+id/textView"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_columnSpan="5"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="16dp"
                app:layout_column="0"
                app:layout_row="0"
                android:layout_height="40dp"
                android:layout_width="195dp"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:text=""
                android:ems="10"
                android:id="@+id/ir0c0"
                app:layout_column="0"
                app:layout_row="1"
                android:inputType="numberSigned|numberDecimal"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir1c0"
                app:layout_column="0"
                app:layout_row="2"
                android:importantForAutofill="no"
                tools:targetApi="o"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir2c0"
                app:layout_column="0"
                app:layout_row="3"
                android:importantForAutofill="no"
                tools:targetApi="o"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir2c1"
                app:layout_column="2"
                app:layout_row="3"
                android:importantForAutofill="no"
                tools:targetApi="o"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir2c2"
                app:layout_column="4"
                app:layout_row="3"
                android:importantForAutofill="no"
                tools:targetApi="o"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir2c3"
                app:layout_column="6"
                app:layout_row="3"
                android:importantForAutofill="no"
                tools:targetApi="o"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir0c1"
                app:layout_column="2"
                app:layout_row="1"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir1c1"
                app:layout_column="2"
                app:layout_row="2"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir0c2"
                app:layout_column="4"
                app:layout_row="1"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                app:layout_column="4"
                app:layout_row="2"
                android:id="@+id/ir1c2"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir1c3"
                app:layout_column="6"
                app:layout_row="2"/>
        <EditText
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:inputType="numberSigned|numberDecimal"
                android:text=""
                android:ems="10"
                android:id="@+id/ir0c3"
                app:layout_column="6"
                app:layout_row="1"/>
        <TextView
                android:text="@string/x1"
                android:paddingBottom="5dip"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="1"
                app:layout_column="1"
                android:id="@+id/textView2"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="2"
                app:layout_column="1"
                android:id="@+id/textView7"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x1"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="3"
                app:layout_column="1"
                android:id="@+id/textView5"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="1"
                app:layout_column="3"
                android:id="@+id/textView6"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="2"
                app:layout_column="3"
                android:id="@+id/textView3"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x2"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="3"
                app:layout_column="3"
                android:id="@+id/textView8"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="2"
                app:layout_column="5"
                android:id="@+id/textView23"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="1"
                app:layout_column="5"
                android:id="@+id/textView4"
                android:textSize="24sp"/>
        <TextView
                android:text="@string/x3"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:layout_row="3"
                app:layout_column="5"
                android:id="@+id/textView9"
                android:textSize="24sp"/>
        <Button
                android:text="@string/solve"
                app:layout_columnSpan="7"
                android:onClick="solveEquations"
                android:layout_width="291dp"
                android:layout_height="wrap_content"
                app:layout_row="6"
                app:layout_column="0"
                android:id="@+id/button"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:ems="10"
                app:layout_row="5"
                app:layout_column="0"
                app:layout_columnSpan="5"
                android:id="@+id/input_epsilon"/>
        <TextView
                android:text=""
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_row="7"
                app:layout_column="0"
                app:layout_columnSpan="5"
                android:id="@+id/view_result"/>
</android.support.v7.widget.GridLayout>